<resources>
    <string name="app_name" translatable="false">"Device Control"</string>
    <string name="app_version_name">"Versionname: %s"</string>
    <string name="app_version_code">"Versioncode: %s"</string>
    <string name="app_information_help">"Welcome to %1$s!\n\nTo get started, swipe out the drawer from the left!\n\nTo edit preferences of %2$s,\nswipe out the drawer from the right!\n\n\nPlease note, that %3$s needs root\nto function properly!\n\n"</string>
    <string name="app_device_help">"Welcome to the Device Screen!\n\nYou can swipe right,\nto discover device controls!\n\n(Note: if a function is not supported,\nit gets hidden automatically.)\n\n"</string>
    <string name="app_performance_help">"Welcome to the Performance Section!\n"</string>
    <string name="app_tasker_help">"Welcome to the Tasker!\n\nYou can swipe right,\nto discover and setup\nautomated tasks!\n\n"</string>
    <string name="app_tools_help">"Welcome to the Tools Section!\n\nYou can swipe right,\nto discover various useful tools!\n\n(Note: please be careful though!)\n\n"</string>
    <string name="app_warning_root">"Please note that %s requires ROOT to fully work!"</string>
    <string name="message_loading">"Loading, please stand by…"</string>
    <string name="fragment_press_to_load">"Press me to load %s."</string>
    <string name="action_press_again">"Press once again to exit!"</string>
    <string name="defaults_button">"Reset to default"</string>
    <string name="general">"General"</string>
    <string name="general_others">"Others"</string>
    <string name="dialog_wait">"Please wait…"</string>
    <string name="dialog_getting_information">"Getting information about %s …"</string>
    <string name="dialog_yes">"Yes"</string>
    <string name="dialog_ok">"OK"</string>
    <string name="dialog_cancel">"Cancel"</string>
    <string name="dialog_warning">"Warning!"</string>
    <string name="dialog_warning_apply">"Are you sure that you want to apply your settings?"</string>
    <string name="dialog_warning_restore_prop">"Are you sure that you want to restore your build.prop?"</string>
    <string name="toast_settings_applied">"Successfully applied!"</string>
    <string name="info_restart">"Please restart the activity!"</string>
    <string name="section_title_welcome">"Welcome"</string>
    <string name="section_title_information">"Information"</string>
    <string name="section_title_general">"General"</string>
    <string name="section_title_device">"Device"</string>
    <string name="section_title_device_input">"Input"</string>
    <string name="section_title_device_light">"Light"</string>
    <string name="section_title_device_sensors">"Sensors"</string>
    <string name="section_title_device_graphics">"Graphics"</string>
    <string name="section_title_tasker">"Tasker"</string>
    <string name="section_title_tasker_optimizations">"Optimizations"</string>
    <string name="section_title_performance">"Performance"</string>
    <string name="section_title_tools">"Tools"</string>
    <string name="section_title_tools_editors">"Editors"</string>
    <string name="section_title_tools_sysctl">"SysCtl"</string>
    <string name="section_title_tools_vm">"VM"</string>
    <string name="section_title_tools_buildprop">"Build.Prop"</string>
    <string name="section_title_tools_freezer">"Freezer"</string>
    <string name="section_title_tools_unfreezer">"Unfreezer"</string>
    <string name="time_in_state">"TIME IN STATE"</string>
    <string name="unused_cpu_states">"UNUSED CPU STATES"</string>
    <string name="total_state_time">"TOTAL STATE TIME"</string>
    <string name="no_states_file_found">"No states file found. Are you sure your phone is
        compatible?\n\nIf you are running a custom ROM or kernel, try
        contacting its developer to inform him that the states file is not
        readable.
    "</string>
    <string name="deep_sleep">""Deep Sleep""</string>
    <string name="device_information">"Device Information"</string>
    <string name="pref_force_highend_gfx_title">"Force high-end graphics"</string>
    <string name="pref_force_highend_gfx_summary">"Enables high-end visual effects such as transparent status/navigation bar (needs to be supported by your rom, requires reboot)"</string>
    <string name="cpu_powersaving">"Powersaving"</string>
    <string name="cpu_powersaving_lcd_title">"LCD Power Reduce"</string>
    <string name="cpu_powersaving_lcd_summary_on">"Power reducing is enabled."</string>
    <string name="cpu_powersaving_lcd_summary_off">"Power reducing is disabled."</string>
    <string name="cpu_intelli_plug_summary_on">"Intelli-Plug is enabled."</string>
    <string name="cpu_intelli_plug_summary_off">"Intelli-Plug is disabled."</string>
    <string name="cpu_powersaving_intelli_plug_eco_title">"Eco Mode"</string>
    <string name="cpu_powersaving_intelli_plug_eco_summary_on">"Intelli-Plug eco mode enabled."</string>
    <string name="cpu_powersaving_intelli_plug_eco_summary_off">"Intelli-Plug eco mode disabled."</string>
    <string name="cpu_powersaving_sched_mc_title">"Power Scheduler"</string>
    <string name="cpu_powersaving_sched_mc_summary">"Tries to group tasks on a core until it reaches its maximum load and powers on the next core.\nIf enabled, it sacrifices power in exchange for battery life.\n\n0 for disabling it, 1 for balanced, 2 for aggressive."</string>
    <string name="cpu_powersaving_sched_mc_0">"0 - Disabled"</string>
    <string name="cpu_powersaving_sched_mc_1">"1 - Balanced"</string>
    <string name="cpu_powersaving_sched_mc_2">"2 - Aggressive"</string>
    <string name="category_sensors_title">"Sensors"</string>
    <string name="gyro_subcat_title">"Gyroscope"</string>
    <string name="use_gyro_calibration_title_head">"Use calibration data"</string>
    <string name="use_gyro_calibration_summary_head">"Use the gyroscope calibration values.\nDo a calibration after checking this!"</string>
    <string name="calibrate_gyro_title_head">"Calibrate"</string>
    <string name="calibrate_gyro_summary_head">"Put your phone on a flat surface, and press to calibrate"</string>
    <string name="touchscreen_subcat_title">"Touchscreen"</string>
    <string name="touchscreen_sensitivity_title_head">"Touch sensitivity"</string>
    <string name="touchscreen_sensitivity_summary_head">"Set touch panel sensitivity"</string>
    <string name="touchkey_subcat_title">"Touch key"</string>
    <string name="touchkey_light_title_head">"Enable keys backlight"</string>
    <string name="touchkey_light_summary_head">"Light up touch keys when screen is on"</string>
    <string name="touchkey_bln_title_head">"Enable keys notifications"</string>
    <string name="touchkey_bln_summary_head">"Light up touch keys when screen is off and a notification is received"</string>
    <string name="keyboard_light_title_head">"Enable keyboard backlight"</string>
    <string name="keyboard_light_summary_head">"Light up keyboard backlight when screen is on"</string>
    <string name="vibrator_title">"Vibrator"</string>
    <string name="vibrator_tuning_title">"Vibration strength"</string>
    <string name="vibrator_tuning_summary_head">"Adjust the strength of the vibration feedback"</string>
    <string name="vibrator_warning">"Values higher than %1$d are not recommended"</string>
    <string name="navbar_title">"Navigation Bar"</string>
    <string name="navbar_force_title">"Force navigation bar"</string>
    <string name="navbar_force_summary">"Requires a reboot!"</string>
    <string name="navbar_warning">"Warning!\nPreference will be hidden, if you close the app, until you reboot!"</string>
    <string name="input_glove_mode_title">"Glove Mode"</string>
    <string name="input_glove_mode_summary">"Makes the touchscreen more sensitive, eg for using it with gloves."</string>
    <string name="panel_gamma_title_head">"Screen gamma"</string>
    <string name="panel_gamma_summary_head">"Set screen gamma value"</string>
    <string name="panel_color_temp_title_head">"Screen color temperature"</string>
    <string name="panel_color_temp_summary_head">"Turn screen off and back on to activate"</string>
    <string name="panel_color_temp_cold">"Cold"</string>
    <string name="panel_color_temp_cool">"Cool"</string>
    <string name="panel_color_temp_normal">"Normal"</string>
    <string name="panel_color_temp_warm">"Warm"</string>
    <string name="panel_color_temp_hot">"Hot"</string>
    <string name="prefs_jf_appearance">"Appearance"</string>
    <string name="prefs_jf_appearance_custom_animations_title">"Use Animations"</string>
    <string name="prefs_jf_appearance_custom_animations_summary_on">"Custom animations are enabled."</string>
    <string name="prefs_jf_appearance_custom_animations_summary_off">"Custom animations are disabled."</string>
    <string name="prefs_jf_appearance_custom_transformer_title">"Page Transformer"</string>
    <string name="prefs_jf_appearance_custom_transformer_summary">"Animation when switching pages in the viewpager."</string>
    <string name="transformer_zoomout">"Zoom Out"</string>
    <string name="transformer_depth">"Depth"</string>
    <string name="prefs_jf_debug">"Debugging"</string>
    <string name="jf_debug_extensive_logging_title">"Extensive Logging"</string>
    <string name="jf_debug_extensive_logging_summary_on">"Logging to LogCat enabled."</string>
    <string name="jf_debug_extensive_logging_summary_off">"Logging to LogCat disabled."</string>
    <string name="prefs_set_on_boot">"Reapply on boot"</string>
    <string name="prefs_jf_version">"Version"</string>
    <string name="tasker_optimization_fstrim_cat_title">"Fstrimming"</string>
    <string name="tasker_optimization_filesystem_fstrim_title">"Automatic fstrimming"</string>
    <string name="tasker_optimization_filesystem_fstrim_summary_on">"Fstrimming enabled."</string>
    <string name="tasker_optimization_filesystem_fstrim_summary_off">"Fstrimming disabled."</string>
    <string name="tasker_optimization_filesystem_fstrim_interval_title">"Fstrim interval"</string>
    <string name="tasker_optimization_filesystem_fstrim_interval_summary">"Choose interval for automatic fstrimming."</string>
    <string name="navigation_drawer_open">"Open navigation drawer"</string>
    <string name="navigation_drawer_close">"Close navigation drawer"</string>
    <string name="action_example">"Example action"</string>
    <string name="action_settings">"Settings"</string>
    <string name="action_help">"Help"</string>
    <string name="action_about">"About"</string>
    <string name="action_licenses">"Licenses"</string>
    <string name="widget_torch_on">"Torch On"</string>
    <string name="widget_torch_off">"Torch Off"</string>
    <string name="five_minutes">"5 Minutes"</string>
    <string name="ten_minutes">"10 Minutes"</string>
    <string name="twenty_minutes">"20 Minutes"</string>
    <string name="thirty_minutes">"30 Minutes"</string>
    <string name="one_hours">"1 Hour"</string>
    <string name="two_hours">"2 Hours"</string>
    <string name="four_hours">"4 Hours"</string>
    <string name="eight_hours">"8 Hours"</string>
    <string name="prefcat_freezer">"FREEZE or DEFROST PACKAGES"</string>
    <string name="pt_freeze">"Freeze Package"</string>
    <string name="pt_unfreeze">"Defrost Package"</string>
    <string name="ps_freeze">"List of all installed packages"</string>
    <string name="mt_system_packs">"System Packages"</string>
    <string name="mt_user_packs">"User Packages"</string>
    <string name="etc_apply_values">"Apply values"</string>
    <string name="etc_filter">"Filter"</string>
    <string name="etc_add_prop_title">"Add Property"</string>
    <string name="etc_prop_restore_title">"Restore"</string>
    <string name="etc_prop_name">"Name"</string>
    <string name="etc_prop_val">"Value"</string>
    <string name="etc_prop_preset">"Presets"</string>
    <string name="etc_no_packages">"No packages"</string>
</resources>