<?xml version="1.0" encoding="UTF-8"?>

<!--  Copyright (C) 2013-2014 Alexander "Evisceration" Martinz

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="pref_force_highend_gfx"
        android:title="@string/pref_force_highend_gfx_title"
        android:summary="@string/pref_force_highend_gfx_summary" />

    <PreferenceCategory
        android:key="powersaving"
        android:title="@string/cpu_powersaving">

        <SwitchPreference
            android:key="lcd_power_reduce"
            android:title="@string/cpu_powersaving_lcd_title"
            android:summaryOn="@string/cpu_powersaving_lcd_summary_on"
            android:summaryOff="@string/cpu_powersaving_lcd_summary_off"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="intelli_plug_eco"
            android:title="@string/cpu_powersaving_intelli_plug_eco_title"
            android:summaryOn="@string/cpu_powersaving_intelli_plug_eco_summary_on"
            android:summaryOff="@string/cpu_powersaving_intelli_plug_eco_summary_off"
            android:defaultValue="false" />

        <SeekBarPreference
            android:key="sched_mc_power_savings"
            android:title="@string/cpu_powersaving_sched_mc_title"
            android:max="2"
            android:defaultValue="2" />

        <Preference
            android:key="sched_mc_power_savings_extended_summary"
            android:summary="@string/cpu_powersaving_sched_mc_summary" />

    </PreferenceCategory>
</PreferenceScreen>

