<?xml version="1.0" encoding="UTF-8"?>

<!--  Copyright (C) 2013 Alexander "Evisceration" Martinz

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="touchkey"
        android:title="@string/touchkey_subcat_title">

        <!-- Touchkey backlight -->
        <CheckBoxPreference
            android:key="touchkey_light"
            android:title="@string/touchkey_light_title_head"
            android:summary="@string/touchkey_light_summary_head"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="touchkey_bln"
            android:title="@string/touchkey_bln_title_head"
            android:summary="@string/touchkey_bln_summary_head"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="keyboard_light"
            android:title="@string/keyboard_light_title_head"
            android:summary="@string/keyboard_light_summary_head"
            android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>

