<?xml version="1.0" encoding="utf-8"?>

<!--  Copyright (C) 2013 Alexander "Evisceration" Martinz

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/tasker_optimization_fstrim_cat_title">

        <SwitchPreference
            android:title="@string/tasker_optimization_filesystem_fstrim_title"
            android:summaryOn="@string/tasker_optimization_filesystem_fstrim_summary_on"
            android:summaryOff="@string/tasker_optimization_filesystem_fstrim_summary_off"
            android:key="tasker_tools_fstrim" />

        <ListPreference
            android:title="@string/tasker_optimization_filesystem_fstrim_interval_title"
            android:entryValues="@array/tasker_fstrim_values"
            android:entries="@array/tasker_fstrim_entries"
            android:summary="@string/tasker_optimization_filesystem_fstrim_interval_summary"
            android:dependency="tasker_tools_fstrim"
            android:key="tasker_tools_fstrim_interval" />

    </PreferenceCategory>

</PreferenceScreen>
