<?xml version="1.0" encoding="UTF-8"?>

<!--  Copyright (C) 2013 Alexander "Evisceration" Martinz

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="sensors"
        android:title="@string/gyro_subcat_title">

        <!-- Use sensor calibration -->
        <CheckBoxPreference
            android:key="use_gyro_calibration"
            android:title="@string/use_gyro_calibration_title_head"
            android:summary="@string/use_gyro_calibration_summary_head"
            android:defaultValue="true" />

        <!-- Do gyro calibration -->
        <Preference
            android:key="calibrate_gyro"
            android:title="@string/calibrate_gyro_title_head"
            android:summary="@string/calibrate_gyro_summary_head" />
    </PreferenceCategory>
</PreferenceScreen>

