<?xml version="1.0" encoding="UTF-8"?>

<!--  Copyright (C) 2013 Alexander "Evisceration" Martinz

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="graphics"
        android:title="@string/section_title_device_graphics">

        <!-- Use sensor calibration -->
        <org.namelessrom.devicecontrol.preferences.PanelColorTemperature
            android:key="panel_color_temperature"
            android:title="@string/panel_color_temp_title_head"
            android:summary="@string/panel_color_temp_summary_head"
            android:entries="@array/panel_color_temp_entries"
            android:entryValues="@array/panel_color_temp_entries_values"
            android:defaultValue="2" />

    </PreferenceCategory>
</PreferenceScreen>

