<?xml version="1.0" encoding="utf-8"?>


<!--
  ~ Copyright (C) 2014 Alexander "Evisceration" Martinz
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tools"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_alignParentBottom="true"
    android:gravity="center_vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp">

    <RelativeLayout
        android:id="@+id/include_editor_tools_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true">

        <ImageButton
            android:src="@drawable/ic_action_editor_restore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/etc_prop_restore_title"
            android:id="@+id/restoreBtn"
            android:layout_gravity="center_vertical|left"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginTop="10dp"
            android:visibility="gone" />

    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/filtru"
        android:inputType="text"
        android:hint="@string/etc_filter"
        android:layout_gravity="center_vertical|left"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/include_editor_tools_right"
        android:layout_toRightOf="@+id/include_editor_tools_left" />

    <RelativeLayout
        android:id="@+id/include_editor_tools_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true">

        <ImageButton
            android:src="@drawable/ic_action_editor_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/etc_add_prop_title"
            android:id="@+id/addBtn"
            android:layout_gravity="center_vertical|right"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginTop="10dp"
            android:visibility="gone" />

        <ImageButton
            android:src="@drawable/ic_action_editor_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/etc_apply_values"
            android:id="@+id/applyBtn"
            android:layout_gravity="center_vertical|right"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginTop="10dp"
            android:visibility="gone" />

    </RelativeLayout>

</RelativeLayout>
